force-app/main/default/objects/Account/fields/Default_Stripe_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Stripe_Payment_Method__c</fullName>
    <externalId>true</externalId>
    <label>Default Stripe Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>