force-app/main/default/objects/Account/fields/Stripe_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account_Id__c</fullName>
    <label>Stripe Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>