force-app/main/default/objects/Account/fields/Stripe_Connected_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Connected_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Connected Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>